# AO_proj

./: .gitignore  CMakeLists.txt  MillerRabin.cpp  MillerRabin.cu  README.md
CUDA/: MillerRabin.cu  UtilTests.cu
CUDA/NOTES/: instrukcja.txt
CUDA/helper/: Utils.cu  Utils.h
CUDA/miller-rabin/: MillerRabin.cu
PYTHON_ANALYZE/: analyze.ipynb
PYTHON_ANALYZE/bit_size_10k_iter/: 16_bit  32_bit  64_bit  8_bit
PYTHON_ANALYZE/iterations_on_single_num/: iterations
PYTHON_ANALYZE/multi_number_file_1k_iter/: 10000_num  1000_num  100_num  100k_num_only_gpu  2500_num  5000_num  500_num
file_samples/: 2700_sample.txt
helper/: FileLoader.cpp  FileLoader.h  TestRunner.cpp  TestRunner.h  Utils.cpp  Utils.cu  Utils.h
miller-cuda/: CudaRngWarmup.cu  CudaRngWarmup.cuh  MillerRabinExecutor.cu  MillerRabinExecutor.cuh  MillerRabinMultipleNumberExecutor.cu  MillerRabinMultipleNumberExecutor.cuh  MillerRabinNsightExecutor.cu  MillerRabinNsightExecutor.cuh
miller-rabin/: MultiThreadedMillerRabinTest.cpp  MultiThreadedMillerRabinTest.h  SingleThreadedMillerRabinTest.cpp  SingleThreadedMillerRabinTest.h
program/: build_program.sh  copy_build.sh  install_cmake.sh  install_google_tests.sh
test_data/: 100_sample.txt  100k_sample.txt  10k_sample.txt  1k_sample.txt  2500_sample.txt  5000_sample.txt  500_sample.txt  MillerRabin  MillerRabinOld  liczby.txt
tests/: CMakeLists.txt  miller_rabin_test.cpp
tests-cuda/: CMakeLists.txt  miller_rabin_gpu_test.cpp
tutorial/: Instalacja.md  Nsight.md  Ruski_chlop.txt  Wstep_do_cuda.md
